# thesis-py

./: .env.example  .gitignore  pyproject.toml  pytest.ini  setup.py
.github/workflows/: run_tests.yml
examples/: automating_section.py  get_conversation.py  get_spaces.py  hello-world.py  hello_world.py  join_conversation.py  listen_conversation.py
examples/polymarket_predictions/: main.py
examples/strategy_factory/: .env.example  config.py  engine.py  main.py  models.py  requirements.txt  storage.py  test_sol_correlation.py
examples/strategy_factory/executors/: __init__.py  llm_executor.py  output_executor.py  python_executor.py  sql_executor.py
examples/strategy_factory/routes/: __init__.py  blueprints.py  executables.py  simulations.py
thesis_py/: api.py
thesis_py/api_schema/: __init__.py  conversations.py  spaces.py
thesis_py/research/: base.py  utils.py
thesis_py/research/events/: __init__.py  utils.py
thesis_py/research/events/schema/: action.py
thesis_py/research/events/serialization/: __init__.py  event.py
